--- a/DownLoad_Threads/src/makefile
+++ b/DownLoad_Threads/src/makefile
@@ -2,7 +2,7 @@ all : s c
 .PHONY : clean
 
 s : server.o
-	g++ server.cpp Epoll.cpp Task.h ThreadPool.cpp TaskSyncQueue.cpp -o s -lpthread
+	g++ server.cpp Epoll.cpp Task.h ThreadPool.cpp TaskSyncQueue.cpp TimerWheel.cpp TimerClass.h -o s -lpthread
 
 c : client.o
 	g++ client.cpp downLoad.cpp -o c -lpthread
